# models-monitor

./: .gitignore  BACKLOG.md  LICENSE  README.md  hermes-model-router.md  service.sh
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cache_rules.py  config.py  join.py  main.py  profiles.py  routes.py  schemas.py  score.py  store.py
backend/app/data/: aa_fixture.json  openrouter_fixture.json
backend/app/sources/: artificial_analysis.py  openrouter.py
backend/tests/: test_join.py  test_score.py
frontend/: .env.example  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  lib.ts  types.ts
frontend/src/components/: Compare.tsx  CostPerformanceMap.tsx  FilterBar.tsx  Header.tsx  ModelDetail.tsx  ModelTable.tsx  RecommendationPanel.tsx  TierBadge.tsx
